# rag-project

./: pyproject.toml
data/text_files/: machine_learning.txt  python_intro.txt
data/vector_store/: chroma.sqlite3
faiss_store/: faiss.index  metadata.pkl
notebook/: document.ipynb  pdf_loader.ipynb
src/: app.py  data_loader.py  embedding.py  search.py  vectorstore.py
